--- a/lit.bib
+++ b/lit.bib
@@ -524,6 +524,36 @@
   publisher = {Elsevier}
 }
 
+@INPROCEEDINGS{MF11,
+  author = {Fadlisyah, M. and {\"O}lveczky, P. C. and {\'A}brah{\'a}m, E.},
+  title = {Object-Oriented Formal Modeling and Analysis of Interacting Hybrid
+	Systems in {HI}-{M}aude},
+  booktitle = {Software Engineering and Formal Methods},
+  year = {2011},
+  editor = {Barthe, G. and Pardo , A. and Schneider, G.},
+  volume = {7041},
+  series = {{L}ecture {N}otes in {C}omputer {S}cience},
+  pages = {415 -- 430},
+  publisher = {Springer},
+  owner = {andylawrence},
+  timestamp = {2014.03.23}
+}
+
+@INPROCEEDINGS{MF12,
+  author = {Fadlisyah, M. and {\"O}lveczky, P. C. and {\'A}brah{\'a}m, E.},
+  title = {Formal Modeling and Analysis of Human Body Exposure to Extreme Heat
+	in {HI}-{M}aude},
+  booktitle = {Rewriting Logic and Its Applications},
+  year = {2012},
+  editor = {Dur{\'a}n, F.},
+  volume = {7571},
+  series = {{L}ecture {N}otes in {C}omputer {S}cience},
+  pages = {139-161},
+  publisher = {Springer},
+  owner = {andylawrence},
+  timestamp = {2014.03.23}
+}
+
 @INPROCEEDINGS{WF98,
   author = {Fokkink , W. and Hollingshead, P.},
   title = {Verification of interlockings: from control tables to ladder logic
