--- a/lit.bib
+++ b/lit.bib
@@ -419,6 +419,18 @@
   publisher = {Springer Berlin Heidelberg}
 }
 
+@BOOK{MaudeBook,
+  title = {All About Maude - A High-Performance Logical Framework},
+  publisher = {Springer},
+  year = {2007},
+  author = {Clavel, M. and Durán, F. and Eker, S. and Lincoln, P. and Mart{\'i}
+	O. and Meseguer, J. and Talcott, C.},
+  volume = {4350},
+  series = {{L}ecture {N}otes in {C}omputer {S}cience},
+  owner = {andylawrence},
+  timestamp = {2014.03.24}
+}
+
 @INPROCEEDINGS{EC09,
   author = {Cohen, E. and Dahlweid, M. and Hillebrand, M. A. and Leinenbach,
 	D. and Moskal, M. and Santen, T. and Schulte, W. and Tobies, S.},
